[gd_scene load_steps=4 format=3 uid="uid://unaoh2lply4h"]

[ext_resource type="Script" path="res://Items/GDScripts/Core/BaseItems/BaseItem.gd" id="1_em6ot"]
[ext_resource type="Shape2D" uid="uid://cvi0u5xmsuyhp" path="res://Items/Scenes/Core/SlotUseScenes/SingleSlot.tres" id="2_6u8bw"]
[ext_resource type="Texture2D" uid="uid://cn0j6m8x6njyo" path="res://Art/Images/icon.svg" id="3_hrx7p"]

[node name="BaseItem" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_em6ot")

[node name="ItemSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("3_hrx7p")

[node name="ItemCharShape" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = ExtResource("2_6u8bw")

[node name="ItemUsedSlots" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="ItemSlotsShape" type="CollisionShape2D" parent="ItemUsedSlots"]
shape = ExtResource("2_6u8bw")
debug_color = Color(0.937255, 0, 0.627451, 0.419608)

[connection signal="area_entered" from="ItemUsedSlots" to="." method="_on_slots_area_entered"]
[connection signal="area_exited" from="ItemUsedSlots" to="." method="_on_slots_area_exited"]
[connection signal="mouse_entered" from="ItemUsedSlots" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ItemUsedSlots" to="." method="_on_mouse_exited"]
